Added API Connection

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <a href='#categories' class='nav-link'>Categories</a>
                 </li>
             </ul>
+            <div id='products'>
+              
+            </div>
         </div>
     </body>
 </html>
